
syntax = "proto3";

service Format {
    rpc check_format(FormatRequest) returns (FormatResponse) {};
}

message FormatRequest {
    string path = 1;
    repeated string formats = 2;
}

message FormatResponse {
    bool return_value = 1;
}
